k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multilayer
  labels:
    name: multilayer
