k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multilayer-ingress
  namespace: multilayer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: goapi.stasik.od.ua
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: multilayer-app
            port:
              number: 80
